# imprint

./: Cargo.toml  FORMAT.md  README.md
.github/workflows/: bench.yml
benches/: data.rs  serde_bench.rs
scripts/: ci_bench.sh  format_critcmp.sh
src/: ops.rs  serde.rs  types.rs  writer.rs
