[package]
name = "imprint"
version = "0.1.0"
edition = "2024"
description = "A binary row serialization format for data pipelines"
license = "MIT"

[dependencies]
thiserror = "1.0"
bytes = "1.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
fake = { version = "2.9", features = ["derive"] }
proptest = "1.4"

[[bench]]
name = "serde_bench"
harness = false